# alt-2-data-analytics

./: .gitignore  README.md  config.ini  config.py  display_data.py  download.py  lib.py  logger.py  main.py  pyproject.toml  read_data.py  requirements.txt
.kaggle/: access_token
tests/: maths.py
